tests/syntax/bad/testfile-lexing-1.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>
int foo(int a, int b) { return a--b; }
